@@ -578,10 +578,11 @@ MagickExport LinkedListInfo *GetConfigureOptions(const char *filename,
     blob=(char *) NTResourceToBlob(filename);
     if (blob != (char *) NULL)
       {
-        xml=StringToStringInfo(blob);
+        xml=AcquireStringInfo(0);
+        xml->length=strlen(blob)+1;
+        xml->datum=(unsigned char *) blob;
         SetStringInfoPath(xml,filename);
         (void) AppendValueToLinkedList(options,xml);
-        blob=DestroyString(blob);
       }
   }
 #endif
