@@ -1,3 +1,7 @@
+2011-11-18  6.7.3-7 Cristy  <quetzlzacatenango@image...>
+  * Ensure embedded XML resource file is null terminated (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19856).
+
 2011-11-17  6.7.3-7 Anthony Thyssen <A.Thyssen@griffith...>
   * Added a -define filter:alpha to contol the 'alpha value' of the
     Kaiser Windowing filter.  Default value is 6.5
